[package]
name = "blogger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
chrono = "0.4.44"
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust"] }
rpassword = "7.4.0"
